--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <h3><a href="ContactMe.html">My Contact Details </a></h3>
 <hr>
 <h3> <a href="Work.html"><strong><i></i>My Expereince</strong></a> </h3>
-
+<a href="Cybermap.html">click here for cybermap</a>
 
 </body>
 
